diffusionSDF - fix opengl in trimesh.show

--- a/Diffusion-SDF/data_processing/acronym_preprocessing.ipynb
+++ b/Diffusion-SDF/data_processing/acronym_preprocessing.ipynb
@@ -1634,6 +1634,7 @@
    ],
    "source": [
     "import trimesh\n",
+    "#!conda install -c conda-forge libstdcxx-ng\n",
     "trimesh.Scene([obj_mesh]).show()"
    ]
   },
