diffusionSDF - fix resize_to_nocs

--- a/Diffusion-SDF/data_processing/acronym_preprocessing.ipynb
+++ b/Diffusion-SDF/data_processing/acronym_preprocessing.ipynb
@@ -1699,17 +1699,23 @@
     "\n",
     "p1, p2 = obj_mesh.bounds\n",
     "\n",
-    "# scale\n",
-    "s = 2 / np.abs(p2 - p1)\n",
-    "S = np.diag(s)\n",
+    "# center\n",
+    "c = (p1 + p2) / 2\n",
     "\n",
     "# translation\n",
-    "t = - S @ p1 - 1\n",
+    "t = - c\n",
+    "\n",
+    "# scaling\n",
+    "s = np.min(2 / np.abs(p2 - p1))\n",
+    "S = s * np.eye(3)\n",
     "\n",
     "# homogeneous transformation matrix\n",
     "transform = np.eye(4, dtype=float)\n",
     "transform[:3, :3] = S\n",
-    "transform[:3, 3] = t\n",
+    "transform[:3, 3] = s * t\n",
+    "\n",
+    "mesh = copy(obj_mesh)\n",
+    "mesh.apply_transform(transform)\n",
     "\n",
     "transform"
    ]
