--- a/Diffusion-SDF/data_processing/acronym_preprocessing.ipynb
+++ b/Diffusion-SDF/data_processing/acronym_preprocessing.ipynb
@@ -1777,9 +1777,8 @@
     "def sample_near(points):\n",
     "    sampled_points = []\n",
     "    for p in points:\n",
-    "        mean = np.zeros((3,))\n",
-    "        p1 = np.random.multivariate_normal(mean, 0.005 * np.eye(3), 1)[0]\n",
-    "        p2 = np.random.multivariate_normal(mean, 0.0005 * np.eye(3), 1)[0]\n",
+    "        p1 = np.random.multivariate_normal(p, 0.005 * np.eye(3), 1)[0]\n",
+    "        p2 = np.random.multivariate_normal(p, 0.0005 * np.eye(3), 1)[0]\n",
     "        sampled_points.extend([p1, p2])\n",
     "    return np.array(sampled_points)\n",
     "\n",
