--- a/SDFusion/demo_uncond_shape_comp.ipynb
+++ b/SDFusion/demo_uncond_shape_comp.ipynb
@@ -40,8 +40,8 @@
     "\n",
     "from datasets.dataloader import CreateDataLoader, get_data_generator\n",
     "from models.base_model import create_model\n",
-    "from utils.qual_util import save_mesh_as_gif\n",
-    "from utils.util_3d import render_sdf, render_mesh, sdf_to_mesh, sdf_to_pcd\n",
+    "from utils.util_3d import save_mesh_as_gif # this was from utils.qual_util\n",
+    "from utils.util_3d import render_sdf, render_mesh, sdf_to_mesh #, sdf_to_pcd\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -79,10 +79,10 @@
      "output_type": "stream",
      "text": [
       "Working with z of shape (1, 3, 16, 16, 16) = 12288 dimensions.\n",
-      "\u001b[34m[*] VQVAE: weight successfully load from: saved_ckpt/vqvae-snet-all.pth\u001b[0m\n",
-      "\u001b[34m[*] weight successfully load from: saved_ckpt/sdfusion-snet-all.pth\u001b[0m\n",
-      "\u001b[34m[*] Model has been created: SDFusion-Model\u001b[0m\n",
-      "\u001b[36m[*] \"SDFusion-Model\" loaded.\u001b[0m\n"
+      "\u001B[34m[*] VQVAE: weight successfully load from: saved_ckpt/vqvae-snet-all.pth\u001B[0m\n",
+      "\u001B[34m[*] weight successfully load from: saved_ckpt/sdfusion-snet-all.pth\u001B[0m\n",
+      "\u001B[34m[*] Model has been created: SDFusion-Model\u001B[0m\n",
+      "\u001B[36m[*] \"SDFusion-Model\" loaded.\u001B[0m\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
       "[*] 6705 samples for table (04379243).\n",
       "[*] 346 samples for phone (04401088).\n",
       "[*] 1474 samples for watercraft (04530566).\n",
-      "\u001b[33m[*] 30525 samples loaded.\u001b[0m\n",
+      "\u001B[33m[*] 30525 samples loaded.\u001B[0m\n",
       "[*] 795 samples for airplane (02691156).\n",
       "[*] 363 samples for bench (02828884).\n",
       "[*] 315 samples for cabinet (02933112).\n",
@@ -208,8 +208,8 @@
       "[*] 1679 samples for table (04379243).\n",
       "[*] 216 samples for phone (04401088).\n",
       "[*] 377 samples for watercraft (04530566).\n",
-      "\u001b[33m[*] 7792 samples loaded.\u001b[0m\n",
-      "\u001b[34m[*] Dataset has been created: ShapeNetSDFDataset\u001b[0m\n"
+      "\u001B[33m[*] 7792 samples loaded.\u001B[0m\n",
+      "\u001B[34m[*] Dataset has been created: ShapeNetSDFDataset\u001B[0m\n"
      ]
     }
    ],
