remove lisa path from notebook

--- a/PVD/visualize_pvd_test.ipynb
+++ b/PVD/visualize_pvd_test.ipynb
@@ -14,12 +14,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PVD_TEST visualizations\n",
+    "\n",
+    "This notebook is meant for visualizing the PRO curves etc with the output of the pvd_test file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "JSON_DIR = '/home/lcur0916/repo/PVD/output/pvd_test'"
+    "JSON_DIR = 'output/pvd_test'"
    ]
   },
   {
